--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ki khaba</title>
+    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
     <p> alu</p>
     <h1>Heading.</h1>
     <img src="biriany.jpg" alt="">
-    
+
 </body>
 </html>
