--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p> alu</p>
+    <p> Biriani khaba naki polaO khaba.</p>
     <h1>Heading.</h1>
     <img src="biriany.jpg" alt="">
 
