--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p> Biriani khaba naki polaO khaba.</p>
     <h1>Heading.</h1>
     <img src="biriany.jpg" alt="">
+    <h1>Burger</h1>
+    <img src= "burger.jfif">
+    <h2>Pizza</h2>
+    <img src= "pizza.jpg">
 
 </body>
 </html>
