--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <p> alu</p>
     <p> Biriani khaba naki polaO khaba.</p>
+    <h2>Ki tumi khacco na kano</h2>
     <h1>Heading.</h1>
+    <p>Tumi ar ki khaba bolo.</p>
+
     <img src="biriany.jpg" alt="">
     <h1>Burger</h1>
     <img src= "burger.jfif">
