--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <p> alu</p>
     <p> Biriani khaba naki polaO khaba.</p>
+    <h2>Anything else sir</h2>
     <h1>Heading.</h1>
     <img src="biriany.jpg" alt="">
     <h1>Burger</h1>
